crates/biome_cli/tests/snapshots/main_commands_format/format_stdin_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --stdin-file-path mock.js
```

# Input messages

```block
function f() {return{}}
```

# Emitted Messages

```block
function f() {
	return {};
}

```
