crates/biome_cli/tests/snapshots/main_commands_format/format_svelte_explicit_js_files_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.svelte
```

## `file.svelte`

```svelte
<script lang="js">
import { something } from "file.svelte";
statement();
</script>
<div></div>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
