crates/biome_cli/tests/snapshots/main_commands_format/format_vue_js_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `file.vue`

```vue
<script>
import {    something } from "file.vue";
statement ( ) ;
</script>
<template></template>
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.vue format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Formatter would have printed the following content:
  
    1 1 │   <script>
    2   │ - import·{····something·}·from·"file.vue";
    3   │ - statement·(·)·;
      2 │ + import·{·something·}·from·"file.vue";
      3 │ + statement();
    4 4 │   </script>
    5 5 │   <template></template>
  

```

```block
Compared 1 file(s) in <TIME>
```


