crates/biome_cli/tests/snapshots/main_commands_format/format_with_configuration.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format file.js --write
```

## `biome.json`

```json
{
  "formatter": {
    "enabled": true,
    "lineWidth": 160,
    "indentStyle": "space",
    "indentWidth": 6
  }
}
```

## `file.js`

```js
function f() {
      return { something };
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
